err/pycodeigniter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyCodeigniter-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/codeigniter'...
Listing './lib/python3.5/site-packages/codeigniter/application'...
Listing './lib/python3.5/site-packages/codeigniter/application/config'...
Listing './lib/python3.5/site-packages/codeigniter/application/controllers'...
Compiling './lib/python3.5/site-packages/codeigniter/application/controllers/Index.py'...
***   File "./lib/python3.5/site-packages/codeigniter/application/controllers/Index.py", line 23
    print row
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/codeigniter/application/helpers'...
Listing './lib/python3.5/site-packages/codeigniter/application/library'...
Listing './lib/python3.5/site-packages/codeigniter/application/models'...
Listing './lib/python3.5/site-packages/codeigniter/application/views'...
Listing './lib/python3.5/site-packages/codeigniter/system'...
Listing './lib/python3.5/site-packages/codeigniter/system/core'...
Compiling './lib/python3.5/site-packages/codeigniter/system/core/CI_Cookie.py'...
***   File "./lib/python3.5/site-packages/codeigniter/system/core/CI_Cookie.py", line 143
    return [("Set-Cookie","%s" % cookiedata) for cookiedata in  self.cookie.values() if "%s" % cookiedata <> ""]
                                                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/codeigniter/system/core/CI_Memcache.py'...
***   File "./lib/python3.5/site-packages/codeigniter/system/core/CI_Memcache.py", line 34
    print r.get('abc')
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/codeigniter/system/core/CI_Session.py'...
***   File "./lib/python3.5/site-packages/codeigniter/system/core/CI_Session.py", line 159
    if self.cookie.get('PySessionUUID') <> None:
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/codeigniter/system/core/CI_Zookeeper.py'...
***   File "./lib/python3.5/site-packages/codeigniter/system/core/CI_Zookeeper.py", line 96
    print zk.is_leader()
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/codeigniter/system/core/__init__.py'...
***   File "./lib/python3.5/site-packages/codeigniter/system/core/__init__.py", line 24
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/codeigniter/system/core/reactor'...
Compiling './lib/python3.5/site-packages/codeigniter/system/core/reactor/fastpy.py'...
***   File "./lib/python3.5/site-packages/codeigniter/system/core/reactor/fastpy.py", line 27
    print "use epoll"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/codeigniter/system/core/reactor/selectreactor.py'...
***   File "./lib/python3.5/site-packages/codeigniter/system/core/reactor/selectreactor.py", line 15
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
